--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <form method="GET" action="/">
+    <form method="" action="">
     </form>
 
   </body>
